--- a/app/views/admin/dedupe/images.html.erb
+++ b/app/views/admin/dedupe/images.html.erb
@@ -1,4 +1,4 @@
-<section id="admin-dedupe-images-view" class="py-8 min-h-screen bg-gray-50">
+<section id="admin-dedupe-images-view" class="bb-page">
   <div class="max-w-6xl mx-auto px-4">
     <div class="flex items-start justify-between gap-4 mb-8">
       <div>
