--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,4 +1,4 @@
-<section id="favorites-index-view" class="py-8 min-h-screen bg-gray-50">
+<section id="favorites-index-view" class="bb-page">
   <% render partial: "shared/capture_navbar" %>
   <% content_for :head do %>
     <meta name="turbo-cache-control" content="no-cache">
