--- a/app/views/slideshows/show.html.erb
+++ b/app/views/slideshows/show.html.erb
@@ -1,4 +1,4 @@
-<section id="slideshows-show-view" class="py-8 min-h-screen bg-gray-50">
+<section id="slideshows-show-view" class="bb-page">
   <% render partial: "shared/capture_navbar" %>
 
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
