--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,36 @@
-<h2>Change your password</h2>
+<section id="bb_passwords_edit" class="bb-page">
+  <div class="bb-container-md">
+    <div class="flex justify-center">
+      <div class="w-full">
+        <div class="text-center mb-8">
+          <h1 class="bb-heading-xl">Change your password</h1>
+          <p class="bb-subtitle">Choose a new password for your account.</p>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  <%= f.hidden_field :reset_password_token %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: "bb-card bb-card--form" }) do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+          <div class="mb-4">
+            <%= f.label :password, "New password", class: "bb-label" %>
+            <% if @minimum_password_length %>
+              <p class="text-xs text-gray-500 mb-2">(<%= @minimum_password_length %> characters minimum)</p>
+            <% end %>
+            <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "bb-input" %>
+          </div>
+
+          <div class="mb-6">
+            <%= f.label :password_confirmation, "Confirm new password", class: "bb-label" %>
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "bb-input" %>
+          </div>
+
+          <div class="flex items-center justify-between">
+            <%= f.submit "Change password", class: "bb-btn bb-btn-primary bb-btn--full" %>
+          </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
