--- a/app/views/shared/_filters.html.erb
+++ b/app/views/shared/_filters.html.erb
@@ -1,4 +1,4 @@
-<div class="filters">
+<div>
   <div class="flex items-center justify-between mb-3">
     <h3 class="text-lg font-medium text-gray-800">Filters</h3>
   </div>
