--- a/app/views/slideshows/show.html.erb
+++ b/app/views/slideshows/show.html.erb
@@ -13,7 +13,7 @@
       </div>
     <% else %>
       <div
-        class="bg-white rounded-lg shadow-lg overflow-hidden border border-gray-300"
+        class="bb-slideshow-shell"
         data-controller="slideshow"
         data-slideshow-slides-url-value="<%= slideshow_images_path(mode: @mode, universe_id: @universe_id) %>"
         data-slideshow-interval-ms-value="3000"
@@ -58,8 +58,7 @@
 
         <!-- Stage -->
         <div
-          class="bg-black flex items-center justify-center relative"
-          style="min-height: 60vh;"
+          class="bb-slideshow-stage"
           data-slideshow-target="stage"
           tabindex="0"
         >
@@ -67,7 +66,7 @@
             data-slideshow-target="image"
             src=""
             alt="Slideshow image"
-            class="max-h-[70vh] w-auto object-contain"
+            class="bb-slideshow-image bb-slideshow-image--default"
           />
 
           <div data-slideshow-target="loading" class="absolute inset-0 flex items-center justify-center text-white text-sm bg-black/40">
